name: umzug
version: 0.0.0.1
synopsis: Bidirectional migrations in your persistence backend of choice.
license: BSD3
license-file: LICENSE
author: Renzo Carbonara
maintainer: ren@ren!zone
category: Database
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src/lib
  default-language: Haskell2010
  ghc-options: -Wall -Werror
  exposed-modules:
      Data.Umzug.Core
      Data.Umzug.PostgreSQL
  build-depends:
      base (>=4.6 && <5.0)
    , blaze-builder (>=0.3 && <0.5)
    , postgresql-simple (>=0.5 && <0.6)
    , text (>=0.11 && <1.3)
    , time (>=1.4 && <1.7)
    , transformers (>=0.3 && < 0.6)
