name: umzug
version: 0.0.0.1
synopsis: Bidirectional migrations in your persistence backend of choice.
license: BSD3
license-file: LICENSE
author: Renzo Carbonara
maintainer: ren@ren!zone
category: Database
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src/lib
  default-language: Haskell2010
  ghc-options: -Wall -Werror
  exposed-modules:
      Umzug
      Umzug.InMemory
      Umzug.PostgreSQL
  build-depends:
      base (>=4.6 && <5.0)
    , aeson
    , blaze-builder
    , bytestring
    , containers
    , di
    , exceptions
    , pipes
    , pipes-aeson
    , pipes-parse
    , pipes-safe
    , postgresql-simple
    , text
    , time
    , transformers

test-suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends:
      base
    , bytestring
    , di
    , ex-pool
    , postgresql-simple
    , text
    , tasty
    , tasty-hunit
    , time
    , umzug
