name: umzug
version: 0.0.0.1
synopsis: Bidirectional migrations in your persistence backend of choice.
license: BSD3
license-file: LICENSE
author: Renzo Carbonara
maintainer: ren@ren!zone
category: Database
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: lib
  default-language: Haskell2010
  ghc-options: -Wall -Werror
  exposed-modules:
      Umzug
      Umzug.Aeson
      Umzug.InMemory
  build-depends:
      aeson
    , base (>=4.6 && <5.0)
    , bytestring
    , containers
    , di
    , exceptions
    , mtl
    , pipes
    , pipes-aeson
    , pipes-parse
    , text
    , time

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
      base
    , bytestring
    , di
    , text
    , tasty
    , tasty-hunit
    , time
    , umzug
